# diaai

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  modernization-guide.md  pyproject.toml  skills-lock.json
.cursor/: hooks.json
.cursor/agents/: README.md  docs-updater.md
.cursor/hooks/: docs-updater-trigger.sh
.cursor/rules/: conventions.mdc  workflow.mdc
.github/workflows/: deploy.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_full_data_layer.py  003_telegram_username.py
backend/: README.md  __init__.py  config.py  database.py  debug_glitchtip.py  exceptions.py  glitchtip_email.py  glitchtip_poller.py  glitchtip_webhook.py  health.py  main.py  metrics.py  sentry_setup.py  smtp_relay.py
backend/api/: deps.py
backend/models/: __init__.py  consultation.py  dialog.py  food_event.py  insulin_event.py  photo_analysis.py  progress_snapshot.py  recommendation.py  request.py  user.py
backend/repositories/: consultation.py  dialog.py  food_event.py  insulin_event.py  photo_analysis.py  progress_snapshot.py  (+4 more)
data/: README.md  progress-import.v1.json
devops/: README.md
docs/: architecture.md  data-model.md  doc-audit.md  how-to-get-tokens.md  idea.md  integrations.md  onboarding.md  plan.md  smoke-test.md  vision.md
prompts/: analytics_sql.txt  system.txt
tests/: test_backend_client.py  test_config.py
web/: .dockerignore  README.md  instrumentation-client.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.edge.config.ts  sentry.shared.ts
(+430 files in other folders)
