[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaai"
version = "0.1.0"
description = "Telegram MVP bot for diabetes assistant dialogs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.22.0",
  "openai>=1.108.0",
  "python-dotenv>=1.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
