[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaai"
version = "0.1.0"
description = "Telegram MVP bot for diabetes assistant dialogs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.22.0",
  "openai>=1.108.0",
  "python-dotenv>=1.1.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
]

[tool.setuptools]
package-dir = {"" = "src", "backend" = "backend"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["diaai*", "backend*"]

[dependency-groups]
dev = [
  "ruff>=0.14.0",
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
